Fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -8,36 +8,37 @@ p{
   color: white;
 }
 
-h1 {
-  color: black;
-  margin-left: 0px;
+h1, h2, h3, h4 {
+    margin-bottom: 10px;
 }
-
 
 h2 {
-  color: black;
-  margin-left: 0px;
-  margin: 0;
-  padding: 0;
-  line-height: 1.2;
+    border-bottom: 2px solid #ffffff;
+    padding-bottom: 5px;
+    margin-top: 20px;
 }
-
 
 h3 {
-  color: black;
-  margin-left: 0px;
-  margin: 0;
-  padding: 0;
-  line-height: 1.2;
+    margin-top: 15px;
 }
 
-
 h4 {
-  color: black;
-  margin-left: 0px;
-  margin: 0;
-  padding: 0;
-  line-height: 1.2;
+    margin-top: 5px;
+    font-weight: normal;
+}
+
+ul {
+    padding-left: 20px;
+}
+
+ul li {
+    margin-bottom: 8px;
+}
+
+section {
+    margin-bottom: 25px; 
+}
+
 }
 
 nav {
